--- a/style.css
+++ b/style.css
@@ -1,3 +1,114 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+
+
+  .header-box {
+    height: 500px;
+    /* border: 1px solid black; */
+    width: 100%;
+    /* border: 10px solid rgb(244, 244, 135); */
+    border: 9px solid #1f4419;
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(50, 126, 45, 0.4)), url(./tarnished.jpg) center center no-repeat;
+    background-size: cover;
+    /* enable flexbox rules */
+    display: flex;
+    /* make content appear from top to bottom rather than left to right */
+    flex-direction: column;
+    /* center in one direction */
+    justify-content: center;
+    /* center in the other direction */
+    align-items: center;
+  }
+
+
+  .junge-regular {
+    font-family: "Junge", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+
+
+  .top-title {
+    color: rgb(192, 223, 185);
+    /* border: 1px solid black; */
+    font-size: 132px;
+  }
+
+  .navbar {
+    display: flex;
+    background-color: rgb(192, 215, 185);
+    justify-content: center;
+    /* border: 1px solid green; */
+    list-style: none;
+  }
+
+
+  .nav-link {
+    /* border: 1px solid red; */
+    color: #2d3d31;
+    text-decoration: none;
+    padding: 30px;
+    padding-top: 0;
+    padding-bottom: 0;
+    font-size: 30px;
+    font-weight: 700;
+  }
+
+
+  .nav-link:hover {
+    color: #eee;
+    background-color: #545E56;
+    transition: .2s;
+  }
+
+
+  .card-container {
+     display: flex; 
+    flex-wrap: wrap; /* Allows the cards to move to a new line if they don't fit in one line. */
+    justify-content: center; 
+    align-items: center; 
+    gap: 100px; 
+    padding: 30px 0;
+}
+    
+    .card {
+        width: 300px;
+        height: 400px; 
+        border-bottom: 4px solid bisque;
+        box-shadow: 2px 5px tomato;
+        background-color: #333;
+        display: flex;
+        flex-direction: column;
+
+    }
+    
+    .card-img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+    }
+    
+    .card-text {
+        padding: 15px;
+    }
+    
+    .card-title {
+        color: tomato;
+    }
+    
+    .card-description {
+        color: bisque;
+        margin-top: 15px;
+        margin-bottom: 30px;
+    }
+    
+    .card-link {
+        color: bisque;
+        border: 1px solid bisque;
         border-radius: 6px;
         padding: 7px 15px;
         text-decoration: none;
