--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     /* border: 1px solid black; */
     width: 100%;
     /* border: 10px solid rgb(244, 244, 135); */
-    border: 9px solid #1f4419;
+    border-bottom: 9px solid #1f4419;
     background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(50, 126, 45, 0.4)), url(./tarnished.jpg) center center no-repeat;
     background-size: cover;
     /* enable flexbox rules */
@@ -44,6 +44,7 @@
     justify-content: center;
     /* border: 1px solid green; */
     list-style: none;
+    height: 60px
   }
 
 
@@ -54,8 +55,10 @@
     padding: 30px;
     padding-top: 0;
     padding-bottom: 0;
-    font-size: 30px;
+    font-size: 52px;
     font-weight: 700;
+    margin-left: 100px;
+    width:200px;
   }
 
 
@@ -69,7 +72,9 @@
   .card-container {
      display: flex; 
     flex-wrap: wrap; /* Allows the cards to move to a new line if they don't fit in one line. */
+    /* x axis */
     justify-content: center; 
+   /* y axis */
     align-items: center; 
     gap: 100px; 
     padding: 30px 0;
@@ -78,9 +83,9 @@
     .card {
         width: 300px;
         height: 400px; 
-        border-bottom: 4px solid bisque;
-        box-shadow: 2px 5px tomato;
-        background-color: #333;
+        border-bottom: 4px solid #889696;
+        box-shadow: 2px 5px #E4FDE1;
+        background-color: #6b7d6b;
         display: flex;
         flex-direction: column;
 
@@ -97,32 +102,35 @@
     }
     
     .card-title {
-        color: tomato;
+        color: #E0E2DB;
     }
     
     .card-description {
-        color: bisque;
+        color: #E0E2DB;
         margin-top: 15px;
         margin-bottom: 30px;
     }
     
     .card-link {
-        color: bisque;
-        border: 1px solid bisque;
+        color: rgb(197, 200, 198);
+        border: 1px solid rgb(255, 255, 255);
         border-radius: 6px;
         padding: 7px 15px;
         text-decoration: none;
         align-self: start;
+        background-color: #556155;
     }
     
     .card-link:hover {
-        border: 3px solid tomato;
-        color: tomato;
-        background-color: bisque;
-        padding: 5px 13px;
+        border: 1px solid rgb(255, 255, 255);
+        color: rgb(238, 243, 239);
+        background-color: rgb(60, 70, 59);
+        padding: 7px 15px;
         transition: .2s;
     }
     
-
+body {
+    background-color: #AAC0AA;
+}
   
   
