--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@
     /* border: 1px solid black; */
     width: 100%;
     /* border: 10px solid rgb(244, 244, 135); */
-    border-bottom: 9px solid #1f4419;
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(50, 126, 45, 0.4)), url(./tarnished.jpg) center center no-repeat;
+    background: linear-gradient(#010101, rgba(184, 137, 35, 0.4)), url(./tarnished.jpg) center center no-repeat;
     background-size: cover;
     /* enable flexbox rules */
     display: flex;
@@ -28,29 +27,38 @@
     font-family: "Junge", cursive;
     font-weight: 400;
     font-style: normal;
+
+
+  }
+
+  .bodoni-moda {
+    font-family: "Bodoni Moda", serif;
+    font-optical-sizing: auto;
+    font-weight: 100px;
+    font-style: normal;
   }
 
 
 
   .top-title {
-    color: rgb(192, 223, 185);
+    color: #D7DEDC;
     /* border: 1px solid black; */
     font-size: 132px;
   }
 
   .navbar {
     display: flex;
-    background-color: rgb(192, 215, 185);
+    background-color: #4B4237;
     justify-content: center;
     /* border: 1px solid green; */
     list-style: none;
-    height: 60px
+    height: 80px
   }
 
 
   .nav-link {
     /* border: 1px solid red; */
-    color: #2d3d31;
+    color: #D7DEDC ;
     text-decoration: none;
     padding: 30px;
     padding-top: 0;
@@ -58,13 +66,13 @@
     font-size: 52px;
     font-weight: 700;
     margin-left: 100px;
-    width:200px;
+    width:2  00px;
   }
 
 
   .nav-link:hover {
     color: #eee;
-    background-color: #545E56;
+    background-color: #6c5f3f;
     transition: .2s;
   }
 
@@ -81,11 +89,11 @@
 }
     
     .card {
-        width: 300px;
+        width: 250px;
         height: 400px; 
-        border-bottom: 4px solid #889696;
-        box-shadow: 2px 5px #E4FDE1;
-        background-color: #6b7d6b;
+        border-bottom: 4px solid #c3a709;
+        box-shadow: 2px 5px #ffffff;
+        background-color: #302d25;
         display: flex;
         flex-direction: column;
 
@@ -105,32 +113,59 @@
         color: #E0E2DB;
     }
     
-    .card-description {
-        color: #E0E2DB;
+    .card-description { 
+        color: #D7DEDC;
         margin-top: 15px;
         margin-bottom: 30px;
     }
     
     .card-link {
-        color: rgb(197, 200, 198);
+        color: rgb(3, 4, 3);
         border: 1px solid rgb(255, 255, 255);
         border-radius: 6px;
         padding: 7px 15px;
         text-decoration: none;
         align-self: start;
-        background-color: #556155;
+        background-color: #ccbc96;
     }
     
     .card-link:hover {
-        border: 1px solid rgb(255, 255, 255);
-        color: rgb(238, 243, 239);
-        background-color: rgb(60, 70, 59);
+        border: 1px solid rgb(217, 214, 177);
+        color: rgb(82, 82, 82);
+        background-color: rgb(220, 210, 160);
         padding: 7px 15px;
         transition: .2s;
     }
     
 body {
-    background-color: #AAC0AA;
+    background-color: #efe5ba ;
 }
   
-  
+.Description-box {
+    border: 4px solid #675d51 ;
+    color: #222522 ;
+    border-radius: 20px;
+    text-align: justify;
+    margin-left: 300px;
+    margin-right: 300px;
+
+}
+
+h2 {
+    display: flex; 
+    flex-wrap: wrap; /* Allows the cards to move to a new line if they don't fit in one line. */
+    /* x axis */
+    justify-content: center; 
+   /* y axis */
+    align-items: center; 
+} 
+
+
+.description-title {
+    margin-top: 75px;
+    font-size: 40px;
+}
+
+.description {
+    padding: 20px;
+}
