--- a/style.css
+++ b/style.css
@@ -49,10 +49,11 @@
   .navbar {
     display: flex;
     background-color: #4B4237;
-    justify-content: center;
-    /* border: 1px solid green; */
+    justify-content: center; /* Horizontally centers the content */
+    align-items: center; /* Vertically centers the content */
     list-style: none;
-    height: 80px
+    height: 65px;
+    width: 100%;
   }
 
 
@@ -65,8 +66,13 @@
     padding-bottom: 0;
     font-size: 52px;
     font-weight: 700;
-    margin-left: 100px;
-    width:2  00px;
+ 
+    width:200px;
+    display: flex;
+    background-color: #4B4237;
+    justify-content: center; /* Horizontally centers the content */
+    align-items: center; /* Vertically centers the content */
+    list-style: none;
   }
 
 
@@ -96,6 +102,7 @@
         background-color: #302d25;
         display: flex;
         flex-direction: column;
+        margin-bottom: 30px;
 
     }
     
@@ -162,7 +169,7 @@ h2 {
 
 
 .description-title {
-    margin-top: 75px;
+    margin-top: 30px; 
     font-size: 40px;
 }
 
