--- a/style.css
+++ b/style.css
@@ -1,178 +1,173 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
-
-
-  .header-box {
-    height: 500px;
-    /* border: 1px solid black; */
-    width: 100%;
-    /* border: 10px solid rgb(244, 244, 135); */
-    background: linear-gradient(#010101, rgba(184, 137, 35, 0.4)), url(./tarnished.jpg) center center no-repeat;
-    background-size: cover;
-    /* enable flexbox rules */
-    display: flex;
-    /* make content appear from top to bottom rather than left to right */
-    flex-direction: column;
-    /* center in one direction */
-    justify-content: center;
-    /* center in the other direction */
-    align-items: center;
-  }
-
-
-  .junge-regular {
-    font-family: "Junge", cursive;
-    font-weight: 400;
-    font-style: normal;
-
-
-  }
-
-  .bodoni-moda {
-    font-family: "Bodoni Moda", serif;
-    font-optical-sizing: auto;
-    font-weight: 100px;
-    font-style: normal;
-  }
-
-
-
-  .top-title {
-    color: #D7DEDC;
-    /* border: 1px solid black; */
-    font-size: 132px;
-  }
-
-  .navbar {
-    display: flex;
-    background-color: #4B4237;
-    justify-content: center; /* Horizontally centers the content */
-    align-items: center; /* Vertically centers the content */
-    list-style: none;
-    height: 65px;
-    width: 100%;
-  }
-
-
-  .nav-link {
-    /* border: 1px solid red; */
-    color: #D7DEDC ;
-    text-decoration: none;
-    padding: 30px;
-    padding-top: 0;
-    padding-bottom: 0;
-    font-size: 52px;
-    font-weight: 700;
- 
-    width:200px;
-    display: flex;
-    background-color: #4B4237;
-    justify-content: center; /* Horizontally centers the content */
-    align-items: center; /* Vertically centers the content */
-    list-style: none;
-  }
-
-
-  .nav-link:hover {
-    color: #eee;
-    background-color: #6c5f3f;
-    transition: .2s;
-  }
-
-
-  .card-container {
-     display: flex; 
-    flex-wrap: wrap; /* Allows the cards to move to a new line if they don't fit in one line. */
-    /* x axis */
-    justify-content: center; 
-   /* y axis */
-    align-items: center; 
-    gap: 100px; 
-    padding: 30px 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
-    
-    .card {
-        width: 250px;
-        height: 400px; 
-        border-bottom: 4px solid #c3a709;
-        box-shadow: 2px 5px #ffffff;
-        background-color: #302d25;
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 30px;
 
-    }
-    
-    .card-img {
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
-    }
-    
-    .card-text {
-        padding: 15px;
-    }
-    
-    .card-title {
-        color: #E0E2DB;
-    }
-    
-    .card-description { 
-        color: #D7DEDC;
-        margin-top: 15px;
-        margin-bottom: 30px;
-    }
-    
-    .card-link {
-        color: rgb(3, 4, 3);
-        border: 1px solid rgb(255, 255, 255);
-        border-radius: 6px;
-        padding: 7px 15px;
-        text-decoration: none;
-        align-self: start;
-        background-color: #ccbc96;
-    }
-    
-    .card-link:hover {
-        border: 1px solid rgb(217, 214, 177);
-        color: rgb(82, 82, 82);
-        background-color: rgb(220, 210, 160);
-        padding: 7px 15px;
-        transition: .2s;
-    }
-    
+
+.header-box {
+  height: 500px;
+  /* border: 1px solid black; */
+  width: 100%;
+  /* border: 10px solid rgb(244, 244, 135); */
+  background: linear-gradient(#010101, rgba(184, 137, 35, 0.4)), url(./tarnished.jpg) center center no-repeat;
+  background-size: cover;
+  /* enable flexbox rules */
+  display: flex;
+  /* make content appear from top to bottom rather than left to right */
+  flex-direction: column;
+  /* center in one direction */
+  justify-content: center;
+  /* center in the other direction */
+  align-items: center;
+}
+
+
+.junge-regular {
+  font-family: "Junge", cursive;
+  font-weight: 400;
+  font-style: normal;
+
+
+}
+
+.bodoni-moda {
+  font-family: "Bodoni Moda", serif;
+  font-optical-sizing: auto;
+  font-weight: 100px;
+  font-style: normal;
+}
+
+
+
+.top-title {
+  color: #D7DEDC;
+  /* border: 1px solid black; */
+  font-size: 132px;
+}
+
+.navbar {
+  display: flex;
+  background-color: #715f49;
+  justify-content: center;
+  /* border: 1px solid green; */
+  list-style: none;
+  height: 70x
+}
+
+
+.nav-link {
+  /* border: 1px solid red; */
+  color: #D7DEDC;
+  text-decoration: none;
+  padding: 30px;
+  padding-top: 0;
+  padding-bottom: 0;
+  font-size: 50px;
+  font-weight: 700;
+
+  width: 200px;
+}
+
+
+.nav-link:hover {
+  color: #eee;
+  background-color: #221b0a;
+  transition: .2s;
+}
+
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  /* Allows the cards to move to a new line if they don't fit in one line. */
+  /* x axis */
+  justify-content: center;
+  /* y axis */
+  align-items: center;
+  gap: 100px;
+  padding: 30px 0;
+}
+
+.card {
+  width: 250px;
+  height: 400px;
+  border-bottom: 4px solid #c3a709;
+  box-shadow: 2px 5px #ffffff;
+  background-color: #302d25;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.card-img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.card-text {
+  padding: 15px;
+}
+
+.card-title {
+  color: #E0E2DB;
+}
+
+.card-description {
+  color: #D7DEDC;
+  margin-top: 15px;
+  margin-bottom: 30px;
+}
+
+.card-link {
+  color: rgb(3, 4, 3);
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 6px;
+  padding: 7px 15px;
+  text-decoration: none;
+  align-self: start;
+  background-color: #ccbc96;
+}
+
+.card-link:hover {
+  border: 1px solid rgb(217, 214, 177);
+  color: rgb(82, 82, 82);
+  background-color: rgb(220, 210, 160);
+  padding: 7px 15px;
+  transition: .2s;
+}
+
 body {
-    background-color: #efe5ba ;
+  background-color: #efe5ba;
 }
-  
+
 .Description-box {
-    border: 4px solid #675d51 ;
-    color: #222522 ;
-    border-radius: 20px;
-    text-align: justify;
-    margin-left: 300px;
-    margin-right: 300px;
+  border: 4px solid #675d51;
+  color: #222522;
+  border-radius: 20px;
+  text-align: justify;
+  margin-left: 300px;
+  margin-right: 300px;
 
 }
 
 h2 {
-    display: flex; 
-    flex-wrap: wrap; /* Allows the cards to move to a new line if they don't fit in one line. */
-    /* x axis */
-    justify-content: center; 
-   /* y axis */
-    align-items: center; 
-} 
+  display: flex;
+  flex-wrap: wrap;
+  /* Allows the cards to move to a new line if they don't fit in one line. */
+  /* x axis */
+  justify-content: center;
+  /* y axis */
+  align-items: center;
+}
 
 
 .description-title {
-    margin-top: 30px; 
-    font-size: 40px;
+  margin-top: 30px;
+  font-size: 40px;
 }
 
 .description {
-    padding: 20px;
+  padding: 20px;
 }
